# vizjj2

./: .prettierignore  .prettierrc  README.md  package.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  Tauri.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: bindings.rs  ipc_commands.rs  lib.rs  main.rs  ts_rs_bindings.rs
src/components/: app_menu.tsx  history_table.tsx  history_tree.tsx  revset_table.tsx  revset_tree.tsx  theme_provider.tsx  title_bar.css  title_bar.tsx
src/components/provider/: font_size_provider.tsx  theme_provider.tsx
src/components/ui/: menubar.tsx  resizable.tsx  tooltip.tsx
src/lib/: graph_layout.ts  ipc_commands.ts  store.ts
src/locales/: en-US.json  zh-CN.json
src/ts_rs_bindings/: Commit.ts
tanstack_table_docs/: faq.md
tanstack_table_docs/examples/column-ordering/: package-lock.json
tanstack_table_docs/examples/column-resizing-performant/: package-lock.json
