[package]
name = "vizjj"
version = "0.1.0"
description = "A Tauri App"
authors = ["natural_selection_@outlook.com"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vizjj_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["config-toml"] }

[dependencies]
tauri = { version = "2", features = ["config-toml"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2.3.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2.7.1"
log = "0.4.28"
time = "0.3.44"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
ts-rs = "11.1.0"
jj-lib = "0.36.0"
jj-cli = "0.36.0"
anyhow = "1.0.100"
chrono = "0.4.42"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
] }
